tracing/pinpoint/pinpoint-agent-attach-example/nginx-php/ubuntu18.04-nginx-php7.2/kubernetes/nginx-php-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-php
spec:
  #headless service
  #clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
  selector:
    app: nginx-php
