tracing/pinpoint/pinpoint-agent-attach-example/nginx-php/ubuntu18.04-nginx-php7.2/kubernetes/nginx-php-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-php
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-php
          servicePort: 80
        path: /path/to
